fix css introduction tablet respon

--- a/src/styles/section/introduction.css
+++ b/src/styles/section/introduction.css
@@ -1,4 +1,4 @@
-@media (max-width: 720px) {
+/* Mobile */
   .introduction {
     width: 369px;
     height: 670px;
@@ -60,7 +60,6 @@
     line-height: 24px;
     font-weight: 700;
   }
-}
 /* Tablet */
 @media (min-width: 720px) and (max-width:1023px) {
   .introduction{
@@ -71,57 +70,17 @@
   .introduction__imagine{
     display: flex;
     justify-content: center;
-  }
-  .heading-introduction{
-    font-weight: 700;
-    line-height: 60px;
-    font-size: 3.6rem;
-    color: var(--text-white);
-    text-align: center;
-    margin-top: 15px;
+    width: 100%;
   }
   .introduction__content {
    width: 600px;
    height: 45px;
    margin: auto;
   }
-  p {
-    margin-top: 10px;
-    color: var(--text-white);
-    font-size: var(--size-18);
-    line-height: 28px;
-    text-align: center;
-    font-weight: 400;
-    margin-bottom: 20px;
-  }
   .btn-getstarted {
-    float: left;
-    width: 142px;
-    height: 53px;
-    font-size: 1.6rem;
-    line-height: 24px;
-    font-weight: 700;
     margin-left:130px;
   }
   .link-watchvideo {
-    color: var(--primary-color);
-    font-size: 1.6rem;
-    line-height: 24px;
-    text-decoration: underline;
-    position: relative;
-    margin-left: 30px;
-    font-weight: 600;
-    float: right;
-    top: 15px;
     margin-right: 140px;
   }
-  .link-watchvideo::before {
-    content: "";
-    border: 10px solid;
-    border-color: transparent transparent transparent var(--primary-color);
-    position: absolute;
-    top: 1px;
-    left: -18px;
-  }
-
 }
